--- a/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
+++ b/FreeAIr/UI/Windows/AgentConfigureWindow.xaml
@@ -37,6 +37,7 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
@@ -90,6 +91,18 @@
 
             <Button
                 Grid.Column="4"
+                Content="📋"
+                Margin="15,0,5,0"
+                FontSize="12"
+                FontFamily="Cascadia Code"
+                VerticalAlignment="Center"
+                ToolTip="Clone"
+                Command="{Binding CloneAgentCommand}"
+                Style="{DynamicResource TextBlockLikeButtonStyle}"
+                />
+
+            <Button
+                Grid.Column="5"
                 Content="Apply changes"
                 Margin="5,0,5,0"
                 FontSize="12"
