--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -120,68 +120,94 @@
             
         </Grid>
 
-        <ListBox
+        <Grid
             Grid.Row="1"
             Grid.Column="0"
-            Margin="0"
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            ItemsSource="{Binding Path=ChatList}"
-            SelectedItem="{Binding Path=SelectedChat}"
-            ScrollViewer.HorizontalScrollBarVisibility="Auto"
-            ScrollViewer.VerticalScrollBarVisibility="Auto"
             >
-            <ListBox.ItemTemplate>
-                <DataTemplate>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-                    <StackPanel
-                        >
-                        <TextBlock
-                            Text="{Binding Path=SecondRow, Mode=OneWay}"
-                            />
-                        <TextBlock
-                            Margin="0,1,0,1"
-                            Text="{Binding Path=ThirdRow, Mode=OneWay}"
-                            />
+            <CheckBox
+                Grid.Row="0"
+                Margin="0,10,2,2"
+                FontFamily="Cascadia Code"
+                FontSize="11"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                Content="Show only user chats"
+                IsChecked="{Binding ShowOnlyUserChats}"
+                />
+
+            <ListBox
+                Grid.Row="1"
+                Margin="0"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                ItemsSource="{Binding Path=ChatList}"
+                SelectedItem="{Binding Path=SelectedChat}"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+
                         <StackPanel
-                            Orientation="Horizontal"
-                            Margin="0,1,0,1"
+                            Opacity="{Binding OpacityLevel}"
                             >
-                            <imaging:CrispImage
-                                Margin="0"
-                                Moniker="{Binding StatusMoniker}"
+                            <TextBlock
+                                FontFamily="Cascadia Code"
+                                Visibility="{Binding SecondRowVisibility}"
+                                Text="{Binding Path=SecondRow, Mode=OneWay}"
                                 />
                             <TextBlock
-                                Margin="5,0,0,0"
-                                Text="{Binding Path=FourthRow, Mode=OneWay}"
+                                Margin="0,1,0,1"
+                                FontFamily="Cascadia Code"
+                                Text="{Binding Path=ThirdRow, Mode=OneWay}"
                                 />
+                            <Grid
+                                HorizontalAlignment="Stretch"
+                                Margin="0,1,0,1"
+                                >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+
+                                <imaging:CrispImage
+                                    Grid.Column="0"
+                                    Margin="0"
+                                    Moniker="{Binding StatusMoniker}"
+                                    />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Margin="5,0,0,0"
+                                    FontFamily="Cascadia Code"
+                                    Text="{Binding Path=FourthRow, Mode=OneWay}"
+                                    />
+
+                                <Button
+                                    Grid.Column="2"
+                                    Margin="2,0,0,0"
+                                    Content="{x:Static resources:Resources.UI_StopWaiting}"
+                                    HorizontalAlignment="Right"
+                                    Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
+                                    CommandParameter="{Binding}"
+                                    Style="{DynamicResource TextBlockLikeButtonStyle}"
+                                    />
+
+                            </Grid>
+
                         </StackPanel>
-                        <Grid
-                            HorizontalAlignment="Stretch"
-                            Margin="0,1,0,1"
-                            >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
 
-                            <Button
-                                Grid.Column="1"
-                                Margin="2,0,0,0"
-                                Content="{x:Static resources:Resources.UI_StopWaiting}"
-                                HorizontalAlignment="Right"
-                                Command="{Binding ElementName=ChatListToolWindow, Path=DataContext.StopCommand}"
-                                CommandParameter="{Binding}"
-                                Style="{DynamicResource TextBlockLikeButtonStyle}"
-                                />
-
-                        </Grid>
-
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        </Grid>
 
         <GridSplitter
             Grid.Row="1"
