--- a/FreeAIr/UI/CodeLens/CodeLenseUserControl.xaml
+++ b/FreeAIr/UI/CodeLens/CodeLenseUserControl.xaml
@@ -7,6 +7,7 @@
     xmlns:ui="clr-namespace:FreeAIr.UI"
     xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
     xmlns:freeair="clr-namespace:FreeAIr"
+    xmlns:resources="clr-namespace:FreeAIr.Resources"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
     ui:VsTheme.UseVsTheme="True"
@@ -34,7 +35,7 @@
                 FontWeight="Bold"
                 VerticalAlignment="Center"
                 Margin="2,0,0,0"
-                Content="FreeAIr available support"
+                Content="{x:Static resources:Resources.FreeAIr_available_support}"
                 />
 
         </StackPanel>
